# claude-code-cc-version

./: CMakeLists.txt  Makefile  README.md  README_cn.md  Theoretical Foundations of Proactive Interactive Agents.md  Whitepaper abount Plugin-Based Proactive Multimodal Interaction Trigger Architecture.md  Whitepaper about Plugin-Based Proactive Multimodal Interaction Trigger Architecture.md  《主动式交互 Agent 理论建设》.md  《基于插件化的主动式多模态交互触发架构白皮书》.md
main_src/: CMakeLists.txt  main.cc
main_src/agents/: plan_mode.cc  plan_mode.h  subagent_coordinator.cc  subagent_coordinator.h  task_manager.cc  task_manager.h
main_src/cli/: agent_commander.cc  agent_commander.h  command_registry.cc  command_registry.h  input_handler.h  input_handler_posix.cc  input_handler_win32.cc  input_manager.h  output_manager.cc  output_manager.h  terminal_input.cc
main_src/common/: banner.cc  banner.h  config.cc  config.h  constants.h  curl_client.cc  curl_client.h  effort_config.cc  file_utils.cc  file_utils.h  input_event.h  input_queue.h  log_wrapper.h  messages_schema.h  noncopyable.h  string_utils.cc  string_utils.h  subprocess_wrapper.cc  subprocess_wrapper.h  thread_pool.h  time_wrapper.cc  time_wrapper.h
main_src/components/: chat_panel.cc  chat_panel.h  input_panel.cc  input_panel.h  status_bar.cc  status_bar.h  ui_panel.cc  ui_panel.h  ui_types.h
main_src/core/: agent_commander.cc  agent_commander.h  agent_core.cc  agent_core.h  agent_role.h  agent_session.h  agent_state_visualizer.h  compact_service.cc  compact_service.h  memory_consolidation_service.h
main_src/managers/: active_interaction_manager.cc  active_trigger_manager.cc  active_trigger_manager.h  agent_role_loader.cc  agent_session_manager.cc  background_task_manager.cc  buddy_manager.cc  buddy_manager.h  buddy_types.cc  buddy_types.h  memory_manager.cc  memory_manager.h  permission_manager.cc  session_manager.cc  session_manager.h  skill_loader.cc  skill_loader.h  token_tracker.cc  token_tracker.h  worktree_manager.cc  worktree_manager.h
main_src/mcp/: mcp_client.cc
main_src/media_engine/sdl_interface/: sdl_common.cc
main_src/providers/: anthropic_provider.cc  anthropic_provider.h  llm_provider.cc  llm_provider.h  ollama_provider.cc  ollama_provider.h  provider_router.cc  provider_router.h  qwen_provider.cc  qwen_provider.h
main_src/scene/: agent_state_observer.cc  agent_state_observer.h  character_sprite.cc  character_sprite.h  character_state_observer.cc  character_state_observer.h  layout_config.h  office_background.cc  office_background.h  office_character_manager.cc  office_character_manager.h  pixel_character.cc  pixel_character.h  sdl_app.cc  sdl_app.h  ui_renderer.cc  ui_renderer.h
main_src/services/: cron_scheduler.cc  cron_scheduler.h  lsp_manager.cc
main_src/tools/: ask_user_question_tool.cc  todo_write_tool.cc  tool_registry.cc  tool_registry.h
main_src/tools/agent_tools/: agent_tool.cc  agent_tool.h
main_src/tools/command_tools/: background_run_tool.cc  background_run_tool.h
main_src/tools/interaction_tools/: ask_user_question_tool.cc  ask_user_question_tool.h
main_src/tools/lsp_tools/: lsp_tool.cc  lsp_tool.h
(+38 files in other folders)
